# amazon-api

./: .gitignore  README.md  main.py  main_with_sku_3_filter.py  pyproject.toml
amazon_api/: amazon_api_client.py
